// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxList renders correctly 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "zIndex": 3,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#000",
        "fontSize": 20,
        "lineHeight": 26,
        "marginHorizontal": 10,
        "textAlign": "center",
      }
    }
  >
    What is the answer of life?
  </Text>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "zIndex": 3,
        },
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      accessibilityRole="checkbox"
      accessibilityState={
        Object {
          "checked": false,
          "disabled": false,
        }
      }
      accessible={true}
      checkedIcon="dot-circle-o"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#ffffff",
          "margin": 5,
          "marginLeft": 10,
          "marginRight": 10,
          "padding": 10,
        }
      }
      testID="checkBoxYes"
      uncheckedIcon="circle-o"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text />
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "#43484d",
              "fontWeight": "bold",
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
          testID="RNE__CheckBox__Title"
        >
          Yes
        </Text>
      </View>
    </View>
    <View
      accessibilityRole="checkbox"
      accessibilityState={
        Object {
          "checked": false,
          "disabled": false,
        }
      }
      accessible={true}
      checkedIcon="dot-circle-o"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#ffffff",
          "margin": 5,
          "marginLeft": 10,
          "marginRight": 10,
          "padding": 10,
        }
      }
      testID="checkBox42"
      uncheckedIcon="circle-o"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text />
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "#43484d",
              "fontWeight": "bold",
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
          testID="RNE__CheckBox__Title"
        >
          42
        </Text>
      </View>
    </View>
    <View
      accessibilityRole="checkbox"
      accessibilityState={
        Object {
          "checked": false,
          "disabled": false,
        }
      }
      accessible={true}
      checkedIcon="dot-circle-o"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#ffffff",
          "margin": 5,
          "marginLeft": 10,
          "marginRight": 10,
          "padding": 10,
        }
      }
      testID="checkBoxCats"
      uncheckedIcon="circle-o"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text />
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "#43484d",
              "fontWeight": "bold",
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
          testID="RNE__CheckBox__Title"
        >
          Cats
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CheckBoxList renders correctly when disabled 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "zIndex": 3,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#000",
        "fontSize": 20,
        "lineHeight": 26,
        "marginHorizontal": 10,
        "textAlign": "center",
      }
    }
  >
    What is the answer of life?
  </Text>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "zIndex": 3,
        },
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      accessibilityRole="checkbox"
      accessibilityState={
        Object {
          "checked": false,
          "disabled": true,
        }
      }
      accessible={true}
      checkedIcon="dot-circle-o"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#ffffff",
          "margin": 5,
          "marginLeft": 10,
          "marginRight": 10,
          "padding": 10,
        }
      }
      testID="checkBoxYes"
      uncheckedIcon="circle-o"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            Array [
              Object {
                "color": "#bfbfbf",
                "fontSize": 24,
              },
              Object {
                "minWidth": 24,
              },
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
          testID="RNE__Checkbox__Icon"
        >
          
        </Text>
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "hsl(208, 8%, 63%)",
              "fontWeight": "bold",
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
          testID="RNE__CheckBox__Title"
        >
          Yes
        </Text>
      </View>
    </View>
    <View
      accessibilityRole="checkbox"
      accessibilityState={
        Object {
          "checked": false,
          "disabled": true,
        }
      }
      accessible={true}
      checkedIcon="dot-circle-o"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#ffffff",
          "margin": 5,
          "marginLeft": 10,
          "marginRight": 10,
          "padding": 10,
        }
      }
      testID="checkBox42"
      uncheckedIcon="circle-o"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            Array [
              Object {
                "color": "#bfbfbf",
                "fontSize": 24,
              },
              Object {
                "minWidth": 24,
              },
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
          testID="RNE__Checkbox__Icon"
        >
          
        </Text>
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "hsl(208, 8%, 63%)",
              "fontWeight": "bold",
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
          testID="RNE__CheckBox__Title"
        >
          42
        </Text>
      </View>
    </View>
    <View
      accessibilityRole="checkbox"
      accessibilityState={
        Object {
          "checked": false,
          "disabled": true,
        }
      }
      accessible={true}
      checkedIcon="dot-circle-o"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#ffffff",
          "margin": 5,
          "marginLeft": 10,
          "marginRight": 10,
          "padding": 10,
        }
      }
      testID="checkBoxCats"
      uncheckedIcon="circle-o"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            Array [
              Object {
                "color": "#bfbfbf",
                "fontSize": 24,
              },
              Object {
                "minWidth": 24,
              },
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
          testID="RNE__Checkbox__Icon"
        >
          
        </Text>
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "hsl(208, 8%, 63%)",
              "fontWeight": "bold",
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
          testID="RNE__CheckBox__Title"
        >
          Cats
        </Text>
      </View>
    </View>
  </View>
</View>
`;
